src/main/java/com/example/recruit_page_wwy/_core/error/ex/ExceptionApi400.java
package com.example.recruit_page_wwy._core.error.ex;

public class ExceptionApi400 extends RuntimeException {
    public ExceptionApi400(String message) {
        super(message);
    }
}
